--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "react-dom": "^18.1.0",
+    "recharts": "^2.1.15"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.3.2",
